fixed dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ ol {
   --brand: hsl(133, 100%, 54%);
   --brand-light: hsl(133, 100%, 54%);
   --brand-dark: hsl(133, 100%, 40%);
+  --text:hsl(0, 0%, 19%);
   --text-black: hsl(0, 0%, 19%);
   --text-white: hsl(0, 25%, 90%);
   --black: #000000;
@@ -61,27 +62,34 @@ ol {
   --body: #ffffff;
   --body-light: #ffffff;
   --body-dark: #141414;
+  --menu:#ffffff;
+  --menu-light:#ffffff;
+  --menu-dark:#141414;
 }
 
 :root {
   color-scheme: light;
   /* set defaults */
   --brand: var(--brand-light);
-  --text-black: var(--text-black);
+  --text: var(--text-black);
   --black: var(--black);
   --white: var(--white);
   --body: var(--body-light);
+  --menu:var(--menu-light)
+;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     color-scheme: dark;
     --brand: var(--brand-dark);
-    --text-black: var(--text-white);
+    --text: var(--text-white);
     --background-color: #000;
     --black: var(--black);
     --white: var(--white);
     --body: var(--body-dark);
+    --menu: var(--menu-dark)
+	;
   }
 }
 
@@ -98,20 +106,20 @@ body {
 
 .menu__logo {
   font-family: "Source Sans Pro", sans-serif;
-  color: var(--text-black);
+  color: var(--text);
   font-weight: 400;
 }
 
 .menu__logo2 {
-  color: var(--brand-light);
+  color: var(--brand);
 }
 
 .menu__item {
   padding: 7px 12px;
   font-size: 15px;
   font-weight: 600;
-  color: var(--text-black);
-  border: 2px solid var(--text-black);
+  color: var(--text);
+  border: 2px solid var(--text);
   text-transform: uppercase;
   text-align: center;
   font-family: "Source Sans Pro", sans-serif;
@@ -130,7 +138,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--brand-light);
+  background-color: var(--brand);
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
   -webkit-transition: all 0.3s;
@@ -149,7 +157,7 @@ body {
   left: 0;
   width: 100%;
   z-index: 9999999;
-  background: var(--white);
+  background: var(--menu);
 }
 
 .banner__wrap {
@@ -168,14 +176,14 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 72px;
   font-weight: 300;
-  color: var(--text-black);
+  color: var(--text);
 }
 
 .banner__text h1 {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 60px;
   font-weight: 900;
-  color: var(--text-black);
+  color: var(--text);
 }
 
 .banner__text h3 {
@@ -183,7 +191,7 @@ body {
   font-size: 50px;
   font-weight: 300;
   letter-spacing: 3.77px;
-  color: var(--text-black);
+  color: var(--text);
   position: relative;
 }
 
@@ -194,7 +202,7 @@ body {
   top: 6px;
   width: 825px;
   height: 51px;
-  background: var(--brand-light);
+  background: var(--brand);
   z-index: -1;
 }
 
@@ -213,7 +221,7 @@ body {
 
 #work .work-bg .work--heading h2 {
   font-family: "Source Sans Pro", sans-serif;
-  color: var(--brand-light);
+  color: var(--brand);
   font-size: 60px;
   font-weight: 900;
   padding-bottom: 50px;
@@ -347,17 +355,17 @@ body {
 
 #work .work-bg .work--btn .fancy:hover {
   color: white;
-  background: var(--brand-light);
-  border: 2px solid var(--brand-light);
+  background: var(--brand);
+  border: 2px solid var(--brand);
 }
 
 #work .work-bg .work--btn .fancy:hover::before {
   width: 0.9375rem;
-  background: var(--text-black);
+  background: var(--text);
 }
 
 #work .work-bg .work--btn .fancy:hover .text {
-  color: var(--text-black);
+  color: var(--text);
   padding-left: 1.5em;
 }
 
@@ -380,7 +388,7 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 60px;
   font-weight: 900;
-  color: var(--text-black);
+  color: var(--text);
   padding-bottom: 20px;
 }
 
@@ -388,7 +396,7 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 24px;
   font-weight: 400;
-  color: var(--text-black);
+  color: var(--text);
   position: relative;
 }
 
@@ -399,7 +407,7 @@ body {
   top: -10px;
   width: 1221px;
   height: 50px;
-  background: var(--brand-light);
+  background: var(--brand);
   z-index: -1;
 }
 
@@ -407,7 +415,7 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 18px;
   font-weight: 300;
-  color: var(--text-black);
+  color: var(--text);
   padding-top: 30px;
 }
 
@@ -445,14 +453,14 @@ body {
 #my-works .my-works--headings h2 {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 900;
-  color: var(--text-black);
+  color: var(--text);
   font-size: 60px;
 }
 
 #my-works .my-works--headings h6 {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 900;
-  color: var(--brand-light);
+  color: var(--brand);
   font-size: 24px;
 }
 
@@ -498,7 +506,7 @@ body {
 }
 
 #my-works .work--crd .card-wrap h4 a:hover i {
-  color: var(--brand-light);
+  color: var(--brand);
 }
 
 #my-works .work--crd .card-wrap h4 a i {
@@ -537,14 +545,14 @@ body {
 #footer .footer--text h6 {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 900;
-  color: var(--brand-light);
+  color: var(--brand);
   font-size: 24px;
   margin-bottom: 20px;
 }
 
 #footer .footer--icon i {
   font-size: 24px;
-  color: var(--brand-light);
+  color: var(--brand);
   margin: 30px;
   -webkit-transition: all linear .3s;
   transition: all linear .3s;
