--- a/scss/base/_color.scss
+++ b/scss/base/_color.scss
@@ -1,10 +1,10 @@
-$brand: var(--brand-light);
-$brand-dark: var(--brand-dark);
+$brand: var(--brand);
 
 
-$-text-black: var(--text-black);
+$-text-black: var(--text);
 $-text-white: var(--text-white);
 
+$menu:var(--menu);
 
 $white: var(--white);
 $black: var(--black);
