--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -57,5 +57,5 @@
 	left: 0;
 	width: 100%;
 	z-index: 9999999;
-	background: $white;
+	background: $menu;
 }
